fixed gap issue for comments on post feed and made modal for post likes

--- a/react-app/src/components/posts/post.css
+++ b/react-app/src/components/posts/post.css
@@ -39,6 +39,14 @@
     margin-bottom: 0;
 }
 
+.number-likes-cursor {
+    margin-left:1rem;
+    font-size: 14px;
+    font-weight:bold;
+    margin-bottom: 0;
+    cursor: pointer;
+}
+
 .post-like-button:hover {
     cursor: pointer;
 }
